moving svg gen into it's own module

--- a/pygames/asteroids/asteroids.ipynb
+++ b/pygames/asteroids/asteroids.ipynb
@@ -5,100 +5,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Install Pygame"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pygame\n",
-      "  Downloading pygame-2.3.0-cp39-cp39-macosx_11_0_arm64.whl (12.2 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.2/12.2 MB\u001b[0m \u001b[31m1.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: pygame\n",
-      "Successfully installed pygame-2.3.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip install pygame"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting svgwrite\n",
-      "  Downloading svgwrite-1.4.3-py3-none-any.whl (67 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m67.1/67.1 kB\u001b[0m \u001b[31m941.4 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: svgwrite\n",
-      "Successfully installed svgwrite-1.4.3\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip install svgwrite"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting cairosvg\n",
-      "  Downloading CairoSVG-2.7.0-py3-none-any.whl (43 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m43.2/43.2 kB\u001b[0m \u001b[31m1.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: pillow in /Users/mton/miniconda3/envs/torch-gpu/lib/python3.9/site-packages (from cairosvg) (9.2.0)\n",
-      "Requirement already satisfied: tinycss2 in /Users/mton/miniconda3/envs/torch-gpu/lib/python3.9/site-packages (from cairosvg) (1.2.1)\n",
-      "Collecting cairocffi\n",
-      "  Downloading cairocffi-1.5.0.tar.gz (86 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m86.8/86.8 kB\u001b[0m \u001b[31m2.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25h  Installing build dependencies ... \u001b[?25ldone\n",
-      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
-      "\u001b[?25h  Installing backend dependencies ... \u001b[?25ldone\n",
-      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting cssselect2\n",
-      "  Downloading cssselect2-0.7.0-py3-none-any.whl (15 kB)\n",
-      "Requirement already satisfied: defusedxml in /Users/mton/miniconda3/envs/torch-gpu/lib/python3.9/site-packages (from cairosvg) (0.7.1)\n",
-      "Requirement already satisfied: cffi>=1.1.0 in /Users/mton/miniconda3/envs/torch-gpu/lib/python3.9/site-packages (from cairocffi->cairosvg) (1.15.1)\n",
-      "Requirement already satisfied: webencodings in /Users/mton/miniconda3/envs/torch-gpu/lib/python3.9/site-packages (from cssselect2->cairosvg) (0.5.1)\n",
-      "Requirement already satisfied: pycparser in /Users/mton/miniconda3/envs/torch-gpu/lib/python3.9/site-packages (from cffi>=1.1.0->cairocffi->cairosvg) (2.21)\n",
-      "Building wheels for collected packages: cairocffi\n",
-      "  Building wheel for cairocffi (pyproject.toml) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for cairocffi: filename=cairocffi-1.5.0-py3-none-any.whl size=90524 sha256=aca400b57b4ff5e9f5d55eb4dd4d6baa88ec1bb2e8947758c1f90c21fe629694\n",
-      "  Stored in directory: /Users/mton/Library/Caches/pip/wheels/34/c0/21/58ab88c0e5a36a32f10f5257afbd6e5fae805171da13691863\n",
-      "Successfully built cairocffi\n",
-      "Installing collected packages: cssselect2, cairocffi, cairosvg\n",
-      "Successfully installed cairocffi-1.5.0 cairosvg-2.7.0 cssselect2-0.7.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip install cairosvg"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### -- [INIT] -- \n",
     "***"
    ]
@@ -116,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +56,7 @@
     ")\n",
     "\n",
     "ASSET_CONTEXT = AssetContext(\n",
-    "    ASSET_FOLDER_PATH = 'assets'\n",
+    "    ASSET_FOLDER_PATH = os.path.join('assets','images')\n",
     ")\n",
     "\n",
     "class BaseEntity:\n",
@@ -209,7 +115,7 @@
     "    # Set the title and icon (optional)\n",
     "    pygame.display.set_caption('Asteroids_TON_Edition')\n",
     "    icon = pygame.image.load(\n",
-    "        os.path.join(ASSET_CONTEXT.ASSET_FOLDER_PATH, 'asteroid.png')\n",
+    "        os.path.join(ASSET_CONTEXT.ASSET_FOLDER_PATH, 'app_icon.jpg')\n",
     "    ).convert_alpha()\n",
     "    pygame.display.set_icon(icon)\n",
     "    return SystemContext(screen, clock)\n",
@@ -268,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,33 +234,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import io\n",
-    "import svgwrite\n",
-    "import cairosvg\n",
-    "\n",
-    "def svg_to_png(dwg : svgwrite.Drawing) -> pygame.Surface:\n",
-    "    # Save the SVG\n",
-    "    svgdata = io.BytesIO()\n",
-    "    svgdata.write(dwg.tostring().encode('utf-8'))\n",
-    "    svgdata.seek(0)\n",
-    "\n",
-    "    # Rasterize the SVG using cairosvg\n",
-    "    surface_data = io.BytesIO()\n",
-    "    cairosvg.svg2png(file_obj=svgdata, write_to=surface_data)\n",
-    "    surface_data.seek(0)\n",
-    "\n",
-    "    #Convert the rasterized image to a pygame surface\n",
-    "    return pygame.image.load(surface_data)\n",
-    "\n",
-    "def svg_generate_ufo() -> pygame.Surface:\n",
-    "    # Create vector graphics\n",
-    "    dwg = svgwrite.Drawing(size=(64, 64))\n",
-    "    dwg.add(dwg.circle(center=(32, 32), r=32, fill='red'))\n",
-    "    return svg_to_png(dwg)\n"
+    "from assets.assets_svg_generate import svg_generate_ufo"
    ]
   },
   {
@@ -367,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
