Updated to use SVG for vector graphics

--- a/pygames/asteroids/asteroids.ipynb
+++ b/pygames/asteroids/asteroids.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,11 +234,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.3.0 (SDL 2.24.2, Python 3.9.13)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    }
+   ],
    "source": [
-    "from assets.assets_svg_generate import svg_generate_ufo"
+    "from assets.assets_svg import svg_ufo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xml_fromstring: <Element '{http://www.w3.org/2000/svg}svg' at 0x105e0d630>\n",
+      "paths: [Path(Arc(start=32j, radius=(32+32j), rotation=0.0, large_arc=True, sweep=False, end=(64+32j)),\n",
+      "     Arc(start=(64+32j), radius=(32+32j), rotation=0.0, large_arc=True, sweep=False, end=32j))] attributes: [{'cx': '32', 'cy': '32', 'r': '32', 'fill': 'blue'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "img_ufo = svg_ufo()"
    ]
   },
   {
@@ -251,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +290,7 @@
     "    img_ship = pygame.image.load(\n",
     "        os.path.join(ASSET_CONTEXT.ASSET_FOLDER_PATH, 'spaceship.png')\n",
     "        ).convert_alpha()\n",
-    "    img_ufo = svg_generate_ufo()\n",
+    "    img_ufo = svg_ufo()\n",
     "    assets = []\n",
     "    for i in range(5):\n",
     "        x = random.randint(0, 160)\n",
@@ -273,6 +301,15 @@
     "    img_ufo = pygame.transform.scale(img_ufo, (96, 96))\n",
     "    assets.append(UFO(160,120, img_ufo))\n",
     "    return assets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install svgpathtools"
    ]
   },
   {
@@ -296,9 +333,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/assets/svg/ufo.svg\n",
+      "[] -- path: Path(Arc(start=32j, radius=(32+32j), rotation=0.0, large_arc=True, sweep=False, end=(64+32j)),\n",
+      "     Arc(start=(64+32j), radius=(32+32j), rotation=0.0, large_arc=True, sweep=False, end=32j)) attr: {'cx': '32', 'cy': '32', 'r': '32', 'fill': 'blue'} -- [] /Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/assets/svg/ufo.svg\n"
+     ]
+    }
+   ],
    "source": [
     "def main() -> None:\n",
     "    context  = on_awake()\n",
