pygame can draw poly, ugh delete svg work lol

--- a/pygames/asteroids/asteroids.ipynb
+++ b/pygames/asteroids/asteroids.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,18 +66,24 @@
     "        pass\n",
     "\n",
     "class DrawEntity(BaseEntity):\n",
-    "    def __init__(self, x,y, image):\n",
+    "    def __init__(self, x,y, shape, color = (255, 255, 255)):\n",
     "        super().__init__()\n",
     "        self.x = x\n",
     "        self.y = y\n",
-    "        self.image = image\n",
+    "        self.shape = shape\n",
+    "        self.color = color\n",
     "\n",
     "    def draw(self, screen : pygame.Surface):\n",
-    "        screen.blit(self.image, (self.x, self.y))\n",
+    "        pygame.draw.polygon(\n",
+    "            screen, \n",
+    "            self.color, \n",
+    "            [(self.x+px, self.y+py) for px,py in self.shape['points']], \n",
+    "            1\n",
+    "        )\n",
     "\n",
     "class GameEntity(DrawEntity):\n",
-    "    def __init__(self, x,y, image, scale = 1, rotation =0, speed = 0):\n",
-    "        super().__init__(x,y, image)\n",
+    "    def __init__(self, x,y, shape, scale = 1, rotation =0, speed = 0):\n",
+    "        super().__init__(x,y, shape)\n",
     "        self.vx = 0\n",
     "        self.vy = 0\n",
     "        self.rotation = rotation\n",
@@ -174,24 +180,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Asteroid(GameEntity):\n",
-    "    def __init__(self, x, y, image):\n",
-    "        super().__init__(x, y, image)\n",
+    "    def __init__(self, x, y, shape):\n",
+    "        super().__init__(x, y, shape)\n",
     "        self.vx = random.randint(-2, 2)\n",
     "        self.vy = random.randint(-2, 2)\n",
-    "        self.rotation = random.randint(0, 359)\n",
-    "\n",
-    "    def draw(self, screen : pygame.Surface):\n",
-    "        # Rotate the image\n",
-    "        rotated_image = pygame.transform.rotate(self.image, self.rotation)\n",
-    "        # Calculate the new image's rect to keep it centered\n",
-    "        rect = self.image.get_rect(center=self.image.get_rect(topleft=(self.x, self.y)).center)\n",
-    "        # Draw the asteroid\n",
-    "        screen.blit(rotated_image, rect.topleft)"
+    "        self.rotation = random.randint(0, 359)"
    ]
   },
   {
@@ -204,16 +202,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "class UFO(GameEntity):\n",
-    "    def __init__(self, x, y, image):\n",
-    "        super().__init__(x, y, image)\n",
+    "    def __init__(self, x, y, shape):\n",
+    "        super().__init__(x, y, shape)\n",
     "        self.vx = random.randint(-8, 8)\n",
     "        self.vy = random.randint(-8, 8)\n",
-    "        self.rotation = 0"
+    "        self.rotation = 0\n",
+    "        self.color = (0, 255, 0)"
    ]
   },
   {
@@ -234,39 +233,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.3.0 (SDL 2.24.2, Python 3.9.13)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from assets.assets_svg import svg_ufo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "xml_fromstring: <Element '{http://www.w3.org/2000/svg}svg' at 0x105e0d630>\n",
-      "paths: [Path(Arc(start=32j, radius=(32+32j), rotation=0.0, large_arc=True, sweep=False, end=(64+32j)),\n",
-      "     Arc(start=(64+32j), radius=(32+32j), rotation=0.0, large_arc=True, sweep=False, end=32j))] attributes: [{'cx': '32', 'cy': '32', 'r': '32', 'fill': 'blue'}]\n"
-     ]
-    }
-   ],
-   "source": [
-    "img_ufo = svg_ufo()"
+    "import math\n",
+    "\n",
+    "def generate_circle_points(size, num_points):\n",
+    "    points = []\n",
+    "    angle = 2 * math.pi/num_points\n",
+    "\n",
+    "    for i in range(num_points):\n",
+    "        x = size * math.cos(angle * i)\n",
+    "        y = size * math.sin(angle * i)\n",
+    "        points.append((x,y))\n",
+    "\n",
+    "    return points\n",
+    "\n",
+    "def generate_asteroid_points(size, num_points):\n",
+    "    points = []\n",
+    "    angle = 2 * math.pi/num_points\n",
+    "\n",
+    "    for i in range(num_points):\n",
+    "        length = random.randint(int(size * 0.5), size)\n",
+    "        x = length * math.cos(angle * i)\n",
+    "        y = length * math.sin(angle * i)\n",
+    "        points.append((x,y))\n",
+    "\n",
+    "    return points"
    ]
   },
   {
@@ -279,27 +273,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "def asset_instantiate() -> list:\n",
-    "    img_asteroid = pygame.image.load(\n",
-    "        os.path.join(ASSET_CONTEXT.ASSET_FOLDER_PATH, 'asteroid.png')\n",
-    "        ).convert_alpha()\n",
-    "    img_ship = pygame.image.load(\n",
-    "        os.path.join(ASSET_CONTEXT.ASSET_FOLDER_PATH, 'spaceship.png')\n",
-    "        ).convert_alpha()\n",
-    "    img_ufo = svg_ufo()\n",
     "    assets = []\n",
+    "    # Instantiate UFO\n",
+    "    ufo_points = generate_circle_points(32, 32)\n",
+    "    assets.append(UFO(0,0, {'points':ufo_points}))\n",
+    "    # Instantiate asteroids\n",
     "    for i in range(5):\n",
     "        x = random.randint(0, 160)\n",
     "        y = random.randint(0, 120)\n",
-    "        random_scale = random.randint(16, 64)\n",
-    "        img = pygame.transform.scale(img_asteroid, (random_scale, random_scale))\n",
-    "        assets.append(Asteroid(x,y, img))\n",
-    "    img_ufo = pygame.transform.scale(img_ufo, (96, 96))\n",
-    "    assets.append(UFO(160,120, img_ufo))\n",
+    "        # random_scale = random.randint(16, 64)\n",
+    "        # img = pygame.transform.scale(img_asteroid, (random_scale, random_scale))\n",
+    "        asteroid_points = generate_asteroid_points(64, 12)\n",
+    "        assets.append(Asteroid(x,y, {'points':asteroid_points}))\n",
+    "\n",
     "    return assets"
    ]
   },
@@ -333,19 +324,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/assets/svg/ufo.svg\n",
-      "[] -- path: Path(Arc(start=32j, radius=(32+32j), rotation=0.0, large_arc=True, sweep=False, end=(64+32j)),\n",
-      "     Arc(start=(64+32j), radius=(32+32j), rotation=0.0, large_arc=True, sweep=False, end=32j)) attr: {'cx': '32', 'cy': '32', 'r': '32', 'fill': 'blue'} -- [] /Users/mton/Documents/GitHub/JupyterJeep/pygames/asteroids/assets/svg/ufo.svg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def main() -> None:\n",
     "    context  = on_awake()\n",
